components + css split

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>tobia.me | Pagina non trovata</title>
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="public/favicon.ico" type="image/ico" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     /* Stile originale della home */
