--- a/cookie.html
+++ b/cookie.html
@@ -17,7 +17,7 @@
   <title>tobia.me | Cookie</title>
   <meta name="description" content="Cookie Policy di tobia.me / miniutti.it: cookie tecnici, consenso, Google Analytics (GA4) opzionale, gestione preferenze e tempi di conservazione." />
   <meta name="theme-color" content="#121212" />
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="assets/favicon.ico" type="image/ico" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
