--- a/legale.html
+++ b/legale.html
@@ -6,7 +6,7 @@
   <title>tobia.me | Legale</title>
   <meta name="description" content="Sezione legale: accesso rapido a privacy, cookie, termini e disclaimer." />
   <meta name="theme-color" content="#121212" />
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="public/favicon.ico" type="image/ico" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
