--- a/privacy.html
+++ b/privacy.html
@@ -1,388 +1,26 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  
-  <!--COOKIE-->
-<link rel="stylesheet" href="https://cookie.miniutti.it/cookiebanner.css">
-<script defer src="https://cookie.miniutti.it/cookiebanner.js"
-        data-ga="G-Q2TKV83VYM"
-        data-policy="/cookie.html"
-        data-privacy="/privacy.html"
-        data-manage="floating"
-        data-manage-pos="br"
-        data-manage-label="Preferenze cookie"></script>
-  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>tobia.me | Privacy</title>
-  <meta name="description" content="Privacy Policy di tobia.me / miniutti.it: informativa GDPR (UE/SEE) + nFADP/LPD (Svizzera), cookie, contatti e diritti." />
+  <title>tobia.me | Privacy Policy</title>
+  <meta name="description" content="Informativa privacy del sito tobia.me." />
   <meta name="theme-color" content="#121212" />
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet" />
-
-  <style>
-    :root{
-      --carbon:#121212;
-      --carbon-deep:#0d0d0d;
-      --golden:#c9a74c;
-      --anthracite:#b3b3b3;
-      --white:#ffffff;
-      --line:rgba(255,255,255,0.10);
-      --shadow-xl:0 14px 44px rgba(0,0,0,0.45);
-      --shadow-lg:0 10px 30px rgba(0,0,0,0.35);
-      --radius-xl:20px;
-      --radius-lg:14px;
-      --transition:0.28s ease;
-      --container:1140px;
-      --header-h:78px;
-    }
-
-    *{margin:0;padding:0;box-sizing:border-box;}
-    html{scroll-behavior:smooth;}
-    body{
-      font-family:'Outfit',sans-serif;
-      color:var(--white);
-      background:
-        radial-gradient(1200px 700px at 80% -10%, rgba(201,167,76,0.08), transparent 60%),
-        radial-gradient(800px 500px at -10% 30%, rgba(201,167,76,0.05), transparent 60%),
-        var(--carbon);
-      min-height:100vh;
-    }
-
-    /* Skip link */
-    .skip-link{
-      position:absolute;
-      left:-999px;
-      top:12px;
-      background:rgba(0,0,0,0.85);
-      border:1px solid rgba(201,167,76,0.35);
-      color:var(--white);
-      padding:.65rem .9rem;
-      border-radius:12px;
-      z-index:1400;
-      text-decoration:none;
-    }
-    .skip-link:focus{left:12px;}
-
-    /* Scroll progress */
-    .scroll-progress{
-      position:fixed;
-      top:0;left:0;
-      width:0%;
-      height:2px;
-      z-index:1300;
-      background:linear-gradient(90deg, rgba(201,167,76,0.9), rgba(201,167,76,0.35));
-      box-shadow:0 0 12px rgba(201,167,76,0.55);
-    }
-
-    /* Header / Navbar */
-    header{
-      height:var(--header-h);
-      backdrop-filter:blur(14px);
-      -webkit-backdrop-filter:blur(14px);
-      background:rgba(12,12,12,0.58);
-      border-bottom:1px solid rgba(255,255,255,0.06);
-      padding:0 2rem;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      position:sticky;
-      top:0;
-      z-index:1200;
-      box-shadow:0 2px 20px rgba(0,0,0,0.5);
-    }
-    .logo{
-      height:40px;
-      width:auto;
-      user-select:none;
-      filter:drop-shadow(0 0 1.5px rgba(0,0,0,0.6));
-    }
-    nav{
-      display:flex;
-      align-items:center;
-      gap:1.8rem;
-    }
-    nav a{
-      position:relative;
-      color:var(--white);
-      text-decoration:none;
-      font-weight:600;
-      font-size:0.98rem;
-      padding-bottom:6px;
-      transition:color var(--transition);
-      outline:none;
-    }
-    nav a::after{
-      content:"";
-      position:absolute;
-      left:0;
-      bottom:0;
-      width:0;
-      height:3px;
-      border-radius:3px 3px 0 0;
-      background:linear-gradient(90deg,#008C45,#F4F5F0,#CD212A);
-      transition:width var(--transition);
-    }
-    nav a[aria-current="page"]::after{width:100%;}
-    nav a:hover, nav a:focus-visible{color:var(--golden);}
-    nav a:hover::after, nav a:focus-visible::after{width:100%;}
-    @supports selector(nav:has(a:hover)){
-      nav:has(a:hover:not([aria-current="page"])) a[aria-current="page"]::after,
-      nav:has(a:focus-visible:not([aria-current="page"])) a[aria-current="page"]::after{width:0;}
-    }
-
-    /* Main */
-    main{
-      max-width:var(--container);
-      margin:0 auto;
-      padding:3.6rem 2rem 5.2rem;
-    }
-
-    /* Panels */
-    .panel{
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border:1px solid var(--line);
-      border-radius:var(--radius-xl);
-      box-shadow:var(--shadow-xl);
-    }
-
-    /* Hero */
-    .legal-hero{
-      padding:2.6rem;
-      text-align:center;
-      margin-bottom:1.6rem;
-      position:relative;
-      overflow:hidden;
-    }
-    .legal-hero::before{
-      content:"";
-      position:absolute;
-      inset:-60px;
-      background:
-        radial-gradient(520px 260px at 50% 10%, rgba(201,167,76,0.16), transparent 60%),
-        radial-gradient(420px 240px at 15% 85%, rgba(201,167,76,0.10), transparent 65%);
-      pointer-events:none;
-    }
-    .legal-hero > *{position:relative; z-index:1;}
-    .legal-hero h1{
-      font-size:clamp(2rem, 3.2vw, 2.7rem);
-      line-height:1.15;
-      margin-bottom:.8rem;
-    }
-    .legal-hero h1 span{color:var(--golden);}
-    .legal-hero p{
-      color:var(--anthracite);
-      line-height:1.85;
-      max-width:90ch;
-      margin:0 auto;
-      font-size:1.03rem;
-    }
-    .meta-row{
-      margin-top:1rem;
-      display:flex;
-      flex-wrap:wrap;
-      justify-content:center;
-      gap:.55rem;
-    }
-    .pill{
-      border:1px solid rgba(201,167,76,0.22);
-      background:rgba(201,167,76,0.06);
-      border-radius:999px;
-      padding:.45rem .75rem;
-      color:var(--white);
-      font-size:.92rem;
-      white-space:nowrap;
-    }
-
-    /* Layout: TOC + content */
-    .legal-grid{
-      display:grid;
-      grid-template-columns: 340px 1fr;
-      gap:1.4rem;
-      align-items:start;
-    }
-    .toc{
-      position:sticky;
-      top:calc(var(--header-h) + 16px);
-      padding:1.25rem;
-      border-radius:var(--radius-xl);
-      border:1px solid var(--line);
-      background:rgba(255,255,255,0.012);
-      box-shadow:var(--shadow-lg);
-      max-height:calc(100vh - var(--header-h) - 36px);
-      overflow:auto;
-    }
-    .toc::-webkit-scrollbar{width:10px;}
-    .toc::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.10); border-radius:12px;}
-    .toc::-webkit-scrollbar-thumb:hover{background:rgba(255,255,255,0.16);}
-
-    .toc h2{
-      font-size:1.05rem;
-      color:var(--golden);
-      margin-bottom:.7rem;
-    }
-    .toc a{
-      display:block;
-      padding:.42rem .2rem;
-      text-decoration:none;
-      color:var(--anthracite);
-      transition:color var(--transition), transform var(--transition);
-      line-height:1.35;
-    }
-    .toc a:hover, .toc a:focus-visible{
-      color:var(--white);
-      transform:translateX(2px);
-      outline:none;
-    }
-
-    .content{
-      display:grid;
-      gap:1.2rem;
-      min-width:0;
-    }
-    .section{
-      padding:2.0rem;
-    }
-    .section h2{
-      color:var(--golden);
-      font-size:1.45rem;
-      margin-bottom:.8rem;
-      line-height:1.25;
-    }
-    .section h3{
-      color:var(--white);
-      font-size:1.08rem;
-      margin:1rem 0 .45rem;
-      line-height:1.25;
-    }
-    .section p, .section li{
-      color:var(--anthracite);
-      line-height:1.9;
-      font-size:1.02rem;
-    }
-    .section ul{margin:.5rem 0 0 1.15rem;}
-    .section a{color:var(--white); text-decoration:none; border-bottom:1px solid rgba(201,167,76,0.35);}
-    .section a:hover{border-bottom-color:rgba(201,167,76,0.7);}
-
-    .callout{
-      margin-top:1rem;
-      padding:1rem 1.05rem;
-      border-radius:var(--radius-lg);
-      border:1px solid rgba(201,167,76,0.18);
-      background:rgba(201,167,76,0.05);
-    }
-    .callout strong{color:var(--white);}
-    .table{
-      width:100%;
-      border-collapse:separate;
-      border-spacing:0;
-      overflow:hidden;
-      border-radius:var(--radius-lg);
-      border:1px solid rgba(255,255,255,0.10);
-      background:rgba(0,0,0,0.18);
-      margin-top:.85rem;
-    }
-    .table th, .table td{
-      padding:.85rem .85rem;
-      border-bottom:1px solid rgba(255,255,255,0.06);
-      vertical-align:top;
-      text-align:left;
-    }
-    .table th{
-      color:rgba(255,255,255,0.92);
-      font-weight:700;
-      background:rgba(255,255,255,0.03);
-    }
-    .table td{color:var(--anthracite);}
-    .table tr:last-child td{border-bottom:none;}
-
-    .snippet{
-      margin-top:.6rem;
-      padding:1rem 1.05rem;
-      border-radius:var(--radius-lg);
-      border:1px solid rgba(255,255,255,0.10);
-      background:rgba(0,0,0,0.25);
-      overflow:auto;
-    }
-    .snippet pre{
-      margin:0;
-      color:rgba(255,255,255,0.88);
-      line-height:1.7;
-      font-size:.95rem;
-      white-space:pre-wrap;
-    }
-
-    /* Footer */
-    footer{
-      background:var(--carbon-deep);
-      border-top:1px solid rgba(255,255,255,0.06);
-      padding:2.6rem 2rem 2rem;
-    }
-    .footer-wrap{
-      max-width:var(--container);
-      margin:0 auto;
-      display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(240px, 1fr));
-      gap:1.8rem;
-    }
-    .footer-col h4{
-      color:var(--golden);
-      margin-bottom:.8rem;
-      font-size:1.03rem;
-    }
-    .footer-col p,
-    .footer-col li,
-    .footer-col a{
-      color:var(--anthracite);
-      text-decoration:none;
-      line-height:1.7;
-    }
-    .footer-col ul{list-style:none;}
-    .footer-col a:hover,
-    .footer-col a:focus-visible{color:var(--white); outline:none;}
-    .footer-bottom{
-      max-width:var(--container);
-      margin:1.8rem auto 0;
-      border-top:1px solid rgba(255,255,255,0.05);
-      padding-top:1rem;
-      text-align:center;
-      color:var(--anthracite);
-      font-size:.9rem;
-    }
-
-    a:focus-visible{
-      outline:2px solid rgba(201,167,76,0.65);
-      outline-offset:3px;
-      border-radius:8px;
-    }
-
-    @media (max-width: 980px){
-      header{padding:0 1rem;}
-      main{padding:3.2rem 1rem 4.5rem;}
-      .legal-grid{grid-template-columns:1fr;}
-      .toc{position:relative; top:auto; max-height:none;}
-    }
-    @media (max-width: 640px){
-      :root{--header-h:72px;}
-      nav{gap:1rem;}
-      nav a{font-size:0.92rem;}
-      .legal-hero{padding:2.0rem 1.2rem;}
-      .section{padding:1.55rem;}
-      .section p, .section li{font-size:1.0rem;}
-    }
-
-    @media (prefers-reduced-motion: reduce){
-      html{scroll-behavior:auto;}
-      html.js .fade-up{opacity:1 !important; transform:none !important; transition:none !important;}
-    }
-  </style>
-
+  <!-- Font + cookie + CSS globale -->
+  <div data-include="components/head.html"></div>
 </head>
 
 <body>
+  <a class="skip-link" href="#contenuto">Salta al contenuto</a>
+  <div class="scroll-progress" aria-hidden="true"></div>
+
+  <div data-include="components/header.html"></div>
+
+  <main id="contenuto">
+    <article class="panel legal-wrap fade-up">
+      <body>
   <a class="skip-link" href="#contenuto">Salta al contenuto</a>
   <div class="scroll-progress" aria-hidden="true"></div>
 
@@ -706,56 +344,13 @@
         </article>
 
       </div>
-    </section>
+      
+    </article>
   </main>
 
-  <footer>
-    <div class="footer-wrap">
-      <div class="footer-col">
-        <h4>tobia.me</h4>
-        <p>Portfolio video e contenuti di Tobia Miniutti.</p>
-      </div>
+  <div data-include="components/footer.html"></div>
 
-      <div class="footer-col">
-        <h4>Link rapidi</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contatti.html">Contatti</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col">
-        <h4>Legale</h4>
-        <ul>
-          <li><a href="privacy.html" aria-current="page">Privacy</a></li>
-          <li><a href="cookie-policy.html">Cookie Policy</a></li>
-          <li><a href="termini.html">Termini &amp; Condizioni</a></li>
-          <li><a href="mailto:privacy@miniutti.it">privacy@miniutti.it</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      © <span id="year"></span> Tobia Miniutti · Tutti i diritti riservati
-    </div>
-  </footer>
-
-  <script>
-    // Year
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Scroll progress
-    const progress = document.querySelector('.scroll-progress');
-    const updateProgress = () => {
-      const scrollTop = window.scrollY || document.documentElement.scrollTop;
-      const docHeight = document.documentElement.scrollHeight - window.innerHeight;
-      const pct = docHeight > 0 ? (scrollTop / docHeight) * 100 : 0;
-      progress.style.width = pct + '%';
-    };
-    updateProgress();
-    window.addEventListener('scroll', updateProgress, { passive: true });
-    window.addEventListener('resize', updateProgress);
-  </script>
+  <script defer src="js/include-components.js"></script>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
