--- a/termini.html
+++ b/termini.html
@@ -17,7 +17,7 @@
   <title>tobia.me | Termini &amp; Condizioni</title>
   <meta name="description" content="Termini e Condizioni di tobia.me / miniutti.it: servizi, preventivi, pagamenti, consegne, licenze, responsabilità, recesso e legge applicabile." />
   <meta name="theme-color" content="#121212" />
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="public/favicon.ico" type="image/ico" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
